--- a/SYSCONTRACT/cadastro-clientes.html
+++ b/SYSCONTRACT/cadastro-clientes.html
@@ -29,7 +29,7 @@
             <li class="item-menu">
                 <a href="clientes.html">
                     <span class="icon"><i class="bi bi-person-vcard"></i></span>
-                    <span class="txt-link">Cadastro</span>
+                    <span class="txt-link">Clente</span>
                 </a>
             </li>
             <li class="item-menu">
@@ -62,53 +62,53 @@
 
     </nav><!--Fim menu lateral-->
 
+
     <div class="form">
         <form action="#">
             <div class="form-header">
                 <div class="title">
                     <h1>Cadastre o Cliente</h1>
                 </div><!--title-->
-                <div class="cadastro-button">
-                    <button>Cadastrar</button>
-                </div><!--cadastro-button-->
+             
             </div><!--form-header-->
-            <div class="input-aluno">
+        <div class="aluno">
+            <div class="input-group">
                 <div class="title-aluno">
                     <h3>Dados Aluno</h3>
                 </div><!--title-aluno-->
                 <div class="input-box">
-                   <label for="primeiro-nome">Primeiro Nome</label>
-                   <input id="primeiro-nome" type="text" name="primeiro-nome" placeholder="Nome do aluno" required>
+                   <label for="nomeA">Nome Completo</label>
+                   <input id="nomeA" type="text" name="nomeA" placeholder="Nome do aluno" required>
                 </div><!--input-box-->
-                <div class="input-box">
-                    <label for="sobrenome">Sobrenome</label>
-                    <input id="sobrenome" type="text" name="sobrenome" placeholder="Sobrenome completo do aluno" required>
+                 <div class="input-box">
+                    <label for="nascimentoA">Data Nascimento</label>
+                    <input id="nascimentoA" type="date" name="nascimentoA" placeholder="dd/mm/aaaa" required>
                  </div><!--input-box-->
                  <div class="input-box">
-                    <label for="contato-aluno">Número contato</label>
-                    <input id="contato-aluno" type="tel" name="contato-aluno" placeholder="(00)00000-0000">
+                    <label for="contatoA">Número contato</label>
+                    <input id="contatoA" type="tel" name="contatoA" placeholder="(00)00000-0000">
                  </div><!--input-box-->
                  <div class="input-box">
-                    <label for="email">Email</label>
-                    <input id="email" type="email" name="email" placeholder="Email aluno">
+                    <label for="emailA">E-mail</label>
+                    <input id="emailA" type="email" name="emailA" placeholder="Email aluno">
                  </div><!--input-box-->
                  <div class="input-box">
                     <label for="escola">Instituição escolar</label>
                     <input id="escola" type="text" name="escola" placeholder="Escola que estuda">
                  </div><!--input-box-->
                  <div class="input-box">
-                    <label for="sexo">Sexo</label>
-                    <input list="sexo">
-                    <datalist id="sexo">
+                    <label for="sexoA">Sexo</label>
+                    <input list="sexoA">
+                    <datalist id="sexoA">
                     <option value="Masculino"></option>
                     <option value="Feminino"></option>
                     <option value="Outros"></option>                    
                     </datalist>
                  </div><!--input-box-->
-                 <div class="input-box"></div>
-                    <label for="série"></label>
-                    <input list="série">
-                    <datalist id="série">
+                 <div class="input-box">
+                    <label for="serie">Série</label>
+                    <input list="serie">
+                    <datalist id="serie">
                     <option value="Infantil"></option>
                     <option value="1° Ano EFI"></option>
                     <option value="2° Ano EFI"></option>
@@ -127,30 +127,87 @@
                     </datalist>
                  </div><!--input-box-->
         </div><!--input-aluno-->
-        <div class="input-endereco">
+        </div> <!--Aluno-->
+
+        <fieldset class="endereco">
+        <div class="input-group">
             <div class="title-endereco">
                 <h3>Dados Endereço</h3>
             </div><!--title-endereco-->
                  <div class="input-box">
                     <label for="CEP">CEP</label>
-                    <input id="cep" type="text" name="cep" placeholder="00000-000">
+                    <input id="cep" type="text" name="cep" placeholder="00000-000" required>
                  </div><!--input-box-->
-                 <div class="input-box"></div>
-                    <label for="CEP">Logradouro</label>
-                    <input id="cep" type="text" name="cep" placeholder="00000-000">
+                 <div class="input-box">
+                    <label for="logradouro">Rua</label>
+                    <input id="logradouro" type="text" name="logradouro" placeholder="Rua Santa Cruz" required>
                  </div><!--input-box-->
-                 <div class="input-box"></div>
-                    <label for="CEP">CEP</label>
-                    <input id="cep" type="text" name="cep" placeholder="00000-000">
+                 <div class="input-box">
+                    <label for="numero">Número</label>
+                    <input id="numero" type="number" name="cep" placeholder="Digite o número da residência" required>
                  </div><!--input-box-->
+                 <div class="input-box">
+                    <label for="bairro">Bairro</label>
+                    <input id="bairro" type="text" name="bairro" placeholder="Centro" required>
+                 </div><!--input-box-->
+                 <div class="input-box">
+                    <label for="cidade">Cidade</label>
+                    <input id="cidade" type="text" name="cidade" placeholder="Itu" required>
+                 </div><!--input-box-->
+                 <div class="input-box">
+                    <label for="estado">Estado</label>
+                    <input id="estado" type="text" name="estado" placeholder="SP" required>
+                 </div><!--input-box-->
+                 <div class="input-box">
+                    <label for="complemento">Complemento</label>
+                    <input id="complemento" type="text" name="complemento" placeholder="Bloco, Ap,...">
+                 </div><!--input-box-->
+        </div><!--input-endereco-->
+        </div><!--endereco-->
 
-        </div><!--input-endereco-->               
+        <fieldset class="responsavel">
+            <div class="input-group">
+                <div class="title-responsavel">
+                <h3>Dados Responsável</h3>
+            </div><!--title-aluno-->
+            <div class="input-box">
+               <label for="nomeR">Nome Completo</label>
+               <input id="nomeR" type="text" name="nomeR" placeholder="Nome do responsável" required>
+            </div><!--input-box-->
+             <div class="input-box">
+                <label for="nascimentoR">Data Nascimento</label>
+                <input id="nascimentoR" type="date" name="nascimentoR" placeholder="dd/mm/aaaa" required>
+             </div><!--input-box-->
+             <div class="input-box">
+                <label for="contatoR">Número contato</label>
+                <input id="contatoR" type="tel" name="contatoR" placeholder="(00)00000-0000">
+             </div><!--input-box-->
+             <div class="input-box">
+                <label for="emailR">E-mail</label>
+                <input id="emailR" type="email" name="emailR" placeholder="Email responsável">
+             </div><!--input-box-->
+             <div class="input-box">
+                <label for="profissao">Profissão</label>
+                <input id="profissao" type="text" name="profissao" placeholder="Profissão">
+             </div><!--input-box-->
+             <div class="input-box">
+                <label for="sexoR">Sexo</label>
+                <input list="sexoR">
+                <datalist id="sexoR">
+                <option value="Masculino"></option>
+                <option value="Feminino"></option>
+                <option value="Outros"></option>                    
+                </datalist>
+             </div><!--input-box-->            
+        </div><!--input-responsavel-->
+        </fieldset><!--responsavel-->
+            <div class="cadastro-button">
+                <button><a href="#">Cadastrar</a></button>
+            </div> <!--cadastro-button-->
             
         </form>
+        </div>
     </div><!--form-->
-
-
-
 
 </body>
 </html>
