página de início finalizada

--- a/SYSCONTRACT/inicio.html
+++ b/SYSCONTRACT/inicio.html
@@ -25,38 +25,50 @@
            
     </header><!--Fim navegação-->
 
+    <h1 id="h1" >O que gostaria de fazer?</h1>
 
     <div class="cards"> <!--cards clicáveis-->
 
-    <div class="card" style="width: 18rem;"> <!--card1-->
-        <img src="" class="card-img-top" alt="...">
-        <div class="card-body">
-          <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-        </div>
+
+      <div class="card" style="width: 18rem;"> <!--card1-->
+        <a href="login.html">
+          <img src="img/card.jpg" class="card-img-top" alt="...">
+        </a>
+          <div class="card-body">
+            <p class="card-text">Armazenar os seus contratos ?</p>
+          </div>
       </div>
 
     <div class="card" style="width: 18rem;"> <!--card2-->
-        <img src="..." class="card-img-top" alt="...">
+      <a href="login.html">
+        <img src="img/card2.png" class="card-img-top" height="165px" alt="...">
+      </a>
         <div class="card-body">
-          <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+          <p class="card-text">Ter facilidade para achar os contratos?</p>
+
         </div>
     </div>
-
+    <!--continuação cards-->
     </div>
 
     <div class="cards2">
 
         <div class="card" style="width: 18rem;"> <!--card3-->
-            <img src="..." class="card-img-top" alt="...">
+          <a href="login.html">
+            <img src="img/card3.png" class="card-img-top" alt="...">
+          </a>
             <div class="card-body">
-              <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+              <p class="card-text">Ter uma análise completa dos contratos ?</p>
             </div>
+
           </div>
     
           <div class="card" style="width: 18rem;"> <!--card4-->
-            <img src="..." class="card-img-top" alt="...">
+            <a href="login.html">
+            <img src="img/card4.avif" class="card-img-top" alt="...">
+            </a>
             <div class="card-body">
-              <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+              <p class="card-text">Ter um banco de dados com os seus clientes?</p>
             </div>
           </div>
 
