--- a/SYSCONTRACT/login.html
+++ b/SYSCONTRACT/login.html
@@ -17,7 +17,7 @@
            <a href="#"><img src="img/logo.png" alt="Logo" height="60" width="100"></a>
                 <button class="hamburguer"></button>       
                 <ul class="nav-list">
-                    <li><a href="#">Início</a></li>
+                    <li><a href="inicio.html">Início</a></li>
                     <li><a href="#">Suporte</a></li>
                     <li><a href="login.html">Login</a></li>
                 </ul>            
