Form Cadastro finalizado

--- a/SYSCONTRACT/cadastro-clientes.html
+++ b/SYSCONTRACT/cadastro-clientes.html
@@ -161,9 +161,25 @@
                         <input type="text" placeholder="" required>
                     </div>
 
-                    
         
+            </div>
 
+            <div class="genero-box"></div>
+                <h3>Sexo</h3>
+                <div class="genero-option">
+                    <div class="genero">
+                        <input type="radio" id="check-feminino" name="genero" checked>
+                        <label for="check-feminino">Feminino</label>
+                    </div>
+                    <div class="genero">
+                        <input type="radio" id="check-masculino" name="genero">
+                        <label for="check-masculino">Masculino</label>
+                    </div>  
+                    <div class="genero">
+                        <input type="radio" id="check-outro" name="genero">
+                        <label for="check-outro">Prefiro não responder</label>
+                    </div>
+                </div>
             </div>
 
 
