--- a/SYSCONTRACT/inicio.html
+++ b/SYSCONTRACT/inicio.html
@@ -15,10 +15,9 @@
     <header class="header">
         <nav class="nav barra-navegar">            
            <a href="#"><img src="img/logo.png" alt="Logo" height="60" width="100"></a>
-                <button class="hamburguer"></button>       
                 <ul class="nav-list">
                     <li><a href="inicio.html">Início</a></li>
-                    <li><a href="#">Suporte</a></li>
+                    <li><a href="suporte.html">Suporte</a></li>
                     <li><a href="login.html">Login</a></li>
                 </ul>            
         </nav>
