--- a/SYSCONTRACT/login.html
+++ b/SYSCONTRACT/login.html
@@ -14,11 +14,10 @@
     <!-- Barra de Navegação -->
     <header class="header">
         <nav class="nav barra-navegar">            
-           <a href="#"><img src="img/logo.png" alt="Logo" height="60" width="100"></a>
-                <button class="hamburguer"></button>       
+           <a href="#"><img src="img/logo.png" alt="Logo" height="60" width="100"></a>     
                 <ul class="nav-list">
                     <li><a href="inicio.html">Início</a></li>
-                    <li><a href="#">Suporte</a></li>
+                    <li><a href="suporte.html">Suporte</a></li>
                     <li><a href="login.html">Login</a></li>
                 </ul>            
         </nav>
