Ajeitada em cadastro de clientes

--- a/SYSCONTRACT/cadastro-clientes.html
+++ b/SYSCONTRACT/cadastro-clientes.html
@@ -29,7 +29,7 @@
             <li class="item-menu">
                 <a href="clientes.html">
                     <span class="icon"><i class="bi bi-person-vcard"></i></span>
-                    <span class="txt-link">Clente</span>
+                    <span class="txt-link">Cliente</span>
                 </a>
             </li>
             <li class="item-menu">
