--- a/SYSCONTRACT/clientes.html
+++ b/SYSCONTRACT/clientes.html
@@ -10,7 +10,7 @@
     <!-- Link para o CSS do Bootstrap - icone -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
     <!-- Seu arquivo de estilos customizados -->
-    <link rel="stylesheet" href="css/style-system.css">
+    <link rel="stylesheet" href="css/style-clientes.css">
 </head>
 <body>
     <!--Menu lateral-->
@@ -62,8 +62,101 @@
 
     </nav><!--Fim menu lateral-->
 
+    <div div class="search-box">
+        <input type="text" class="search-text" placeholder="Pesquisar">
+        <a class="search-btn">
+            <img class="loupe-black" src="img/pesquisar-black.svg" alt="" width="25px" height="">
+            <img class="loupe-white" src="img/pesquisar-white.svg" alt="" width="25px" height="">
+        </a>
+    </div>
 
-
-
+    <!--Tabela-->
+    <div id="container">
+        <table>
+            <caption>Dados Clientes</caption>
+        <thead>
+        <tr>
+                <th>ID</th>
+                <th>Nome Aluno</th>
+                <th>E-mail Aluno</th>
+                <th>Telefone Aluno</th>
+                <th>Data Nascimento Aluno</th>
+                <th>Instituição Escolar</th>
+                <th>Série Escolar</th>
+                <th>Sexo Aluno</th>
+                <th>Endereço</th>
+                <th>Número</th>
+                <th>Complemento</th>
+                <th>Cidade</th>
+                <th>Bairro</th>
+                <th>CEP</th>
+                <th>Nome Responsável</th>
+                <th>CPF Responsável</th>
+                <th>RG Responsável</th>
+                <th>E-mail Responsável</th>
+                <th>Telefone Responsável</th>
+                <th>Data Nascimento Responsável</th>
+                <th>Profissão</th>
+                <th>Sexo Responsável</th>
+                <th>Data de Cadastro</th> <!--A data irá ser a mesma no dia do cadastro (hoje)-->
+                <th>Ação</th> <!--Implementar ação de editar/excluir o que está escrito na tabela-->
+            </tr>
+        </thead>
+            <tr>
+                <td></td><!--Deverá aparecer após gerar o cadastro-->
+                <td></td><!--Deverá aparecer após gerar o cadastro-->
+                <td></td><!--Deverá aparecer após gerar o cadastro-->
+                <td></td><!--Deverá aparecer após gerar o cadastro-->
+                <td></td><!--Deverá aparecer após gerar o cadastro-->
+                <td></td><!--Deverá aparecer após gerar o cadastro-->
+                <td></td><!--Deverá aparecer após gerar o cadastro-->
+                <td></td><!--Deverá aparecer após gerar o cadastro-->
+                <td></td><!--Deverá aparecer após gerar o cadastro-->
+                <td></td><!--Deverá aparecer após gerar o cadastro-->
+                <td></td><!--Deverá aparecer após gerar o cadastro-->
+                <td></td><!--Deverá aparecer após gerar o cadastro-->
+                <td></td><!--Deverá aparecer após gerar o cadastro-->
+                <td></td><!--Deverá aparecer após gerar o cadastro-->
+                <td></td><!--Deverá aparecer após gerar o cadastro-->
+                <td></td><!--Deverá aparecer após gerar o cadastro-->
+                <td></td><!--Deverá aparecer após gerar o cadastro-->
+                <td></td><!--Deverá aparecer após gerar o cadastro-->
+                <td></td><!--Deverá aparecer após gerar o cadastro-->
+                <td></td><!--Deverá aparecer após gerar o cadastro-->
+                <td></td><!--Deverá aparecer após gerar o cadastro-->
+                <td></td><!--Deverá aparecer após gerar o cadastro-->
+                <td></td><!--Deverá aparecer após gerar o cadastro-->
+                <td></td><!--Deverá aparecer após gerar o cadastro-->
+            </tr>
+            <tr>
+            <td></td><!--Deverá aparecer após gerar o cadastro-->
+            <td></td><!--Deverá aparecer após gerar o cadastro-->
+            <td></td><!--Deverá aparecer após gerar o cadastro-->
+            <td></td><!--Deverá aparecer após gerar o cadastro-->
+            <td></td><!--Deverá aparecer após gerar o cadastro-->
+            <td></td><!--Deverá aparecer após gerar o cadastro-->
+            <td></td><!--Deverá aparecer após gerar o cadastro-->
+            <td></td><!--Deverá aparecer após gerar o cadastro-->
+            <td></td><!--Deverá aparecer após gerar o cadastro-->
+            <td></td><!--Deverá aparecer após gerar o cadastro-->
+            <td></td><!--Deverá aparecer após gerar o cadastro-->
+            <td></td><!--Deverá aparecer após gerar o cadastro-->
+            <td></td><!--Deverá aparecer após gerar o cadastro-->
+            <td></td><!--Deverá aparecer após gerar o cadastro-->
+            <td></td><!--Deverá aparecer após gerar o cadastro-->
+            <td></td><!--Deverá aparecer após gerar o cadastro-->
+            <td></td><!--Deverá aparecer após gerar o cadastro-->
+            <td></td><!--Deverá aparecer após gerar o cadastro-->
+            <td></td><!--Deverá aparecer após gerar o cadastro-->
+            <td></td><!--Deverá aparecer após gerar o cadastro-->
+            <td></td><!--Deverá aparecer após gerar o cadastro-->
+            <td></td><!--Deverá aparecer após gerar o cadastro-->
+            <td></td><!--Deverá aparecer após gerar o cadastro-->
+            <td></td><!--Deverá aparecer após gerar o cadastro-->
+            </tr>
+        
+            
+        </table>
+    </div>
 </body>
 </html>
