--- a/SYSCONTRACT/gerenciador.html
+++ b/SYSCONTRACT/gerenciador.html
@@ -10,7 +10,7 @@
     <!-- Link para o CSS do Bootstrap - icone -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
     <!-- Seu arquivo de estilos customizados -->
-    <link rel="stylesheet" href="css/style-system.css">
+    <link rel="stylesheet" href="css/style-gerenciador.css">
 </head>
 <body>
     <!--Menu lateral-->
@@ -54,6 +54,84 @@
         </ul>
 
     </nav><!--Fim menu lateral-->
+
+    <div div class="search-box">
+        <input type="text" class="search-text" placeholder="Pesquisar">
+        <a class="search-btn">
+            <img class="loupe-black" src="img/pesquisar-black.svg" alt="" width="25px" height="25px">
+            <img class="loupe-white" src="img/pesquisar-white.svg" alt="" width="25px" height="25px">
+        </a>
+    </div>
+
+    <div id="container">
+        <table>
+            <caption>Contratos Gerados</caption>
+        <thead>
+        <tr>
+                <th>ID</th>
+                <th>Nome Aluno</th>
+                <th>Abertura</th>
+                <th>Finalização</th>
+                <th>Não assinado</th> <!--Será necessário fazer o download do documento gerado-->
+                <th>Assinado</th> <!--Será necessário fazer o upload do documento assinado-->
+                <th>Valor por Hora</th> 
+                <th>Total de Horas</th>
+                <th>Horas por mês</th> 
+                <th>Total a pagar</th> <!--Lógica (valor por hora * total de horas: se não der para implantar não tem problema)-->
+                <th>Parcelas</th>
+                <th>Valor por mês</th> <!--Lógica (valor por hora / parcelas: se não der para implantar não tem problema)-->
+                <th>Data de pagamento</th>
+                <th>Renovação Automática</th>
+                <th>Forma de pagamento</th>
+                <th>Serviço</th>
+                <th>Vezes na semana</th>
+                <th>Ação</th> <!--Implementar ação de editar/excluir o que está escrito na tabela-->
+            </tr>
+        </thead>
+            <tr>
+                <td></td><!--Deverá aparecer após gerar o contrato-->
+                <td></td><!--Deverá aparecer após gerar o contrato-->
+                <td></td><!--Deverá aparecer após gerar o contrato-->
+                <td></td><!--Deverá aparecer após gerar o contrato-->
+                <td></td><!--Deverá aparecer após gerar o contrato-->
+                <td></td><!--Deverá aparecer após gerar o contrato-->
+                <td></td><!--Deverá aparecer após gerar o contrato-->
+                <td></td><!--Deverá aparecer após gerar o contrato-->
+                <td></td><!--Deverá aparecer após gerar o contrato-->
+                <td></td><!--Deverá aparecer após gerar o contrato-->
+                <td></td><!--Deverá aparecer após gerar o contrato-->
+                <td></td><!--Deverá aparecer após gerar o contrato-->
+                <td></td><!--Deverá aparecer após gerar o contrato-->
+                <td></td><!--Deverá aparecer após gerar o contrato-->
+                <td></td><!--Deverá aparecer após gerar o contrato-->
+                <td></td><!--Deverá aparecer após gerar o contrato-->
+                <td></td><!--Deverá aparecer após gerar o contrato-->
+                <td></td><!--Deverá aparecer após gerar o contrato-->
+            </tr>
+            <tr>
+                <td></td><!--Deverá aparecer após gerar o contrato-->
+                <td></td><!--Deverá aparecer após gerar o contrato-->
+                <td></td><!--Deverá aparecer após gerar o contrato-->
+                <td></td><!--Deverá aparecer após gerar o contrato-->
+                <td></td><!--Deverá aparecer após gerar o contrato-->
+                <td></td><!--Deverá aparecer após gerar o contrato-->
+                <td></td><!--Deverá aparecer após gerar o contrato-->
+                <td></td><!--Deverá aparecer após gerar o contrato-->
+                <td></td><!--Deverá aparecer após gerar o contrato-->
+                <td></td><!--Deverá aparecer após gerar o contrato-->
+                <td></td><!--Deverá aparecer após gerar o contrato-->
+                <td></td><!--Deverá aparecer após gerar o contrato-->
+                <td></td><!--Deverá aparecer após gerar o contrato-->
+                <td></td><!--Deverá aparecer após gerar o contrato-->
+                <td></td><!--Deverá aparecer após gerar o contrato-->
+                <td></td><!--Deverá aparecer após gerar o contrato-->
+                <td></td><!--Deverá aparecer após gerar o contrato-->
+                <td></td><!--Deverá aparecer após gerar o contrato-->
+            </tr>
+        
+            
+        </table>
+    </div>
 
 
 
