--- a/SYSCONTRACT/login.html
+++ b/SYSCONTRACT/login.html
@@ -14,7 +14,7 @@
         <!-- Barra de Navegação -->
         <header class="header">
             <nav class="nav barra-navegar">            
-               <a href="#"><img src="img/logo.png" alt="Logo" height="60" width="100"></a>
+               <a href="inicio.html"><img src="img/logo.png" alt="Logo" height="60" width="100"></a>
                     <button class="hamburguer"></button>       
                     <ul class="nav-list">
                         <li><a href="inicio.html">Início</a></li>
