Pagamento quase finalizado

--- a/SYSCONTRACT/contrato.html
+++ b/SYSCONTRACT/contrato.html
@@ -56,7 +56,98 @@
     </nav><!--Fim menu lateral-->
 
 
+<div class="container">
+    <div class="form-image">
+        <img src="img/undraw_transfer_money_re_6o1h.svg" >
+    </div>
+    <div class="form2">
+        <form action="#">
+            <div form-header>
+                <div class="title">
+                    <h1>Pagamento</h1>
+                </div>
+            </div>
 
+            <div class="input-group">
+                <div class="input-box">
+                    <label for="Valorporhora">Valor/hora</label>
+                    <input id="Valorporhora" type="number">
+                </div>
+
+                <div class="input-box">
+                    <label for="Totalhoras">Total de horas</label>
+                    <input id="Totalhoras" type="number">
+                </div>
+
+                <div class="input-box">
+                    <label for="horapormes">Horas por mês</label>
+                    <input id="horapormes" type="number">
+                </div>
+
+                <div class="input-box">
+                    <label for="total">Total a pagar</label>
+                    <input id="total" type="number">
+                </div>
+
+                <div class="input-box">
+                    <label for="Parcela">Parcelas</label>
+                    <input id="Parcela" type="number">
+                </div>
+
+                <div class="input-box">
+                    <label for="Valorpormes">Valor por mês</label>
+                    <input id="Valorpormes" type="date">
+                </div>
+
+                <div class="input-box">
+                    <label for="Datapagamento">Data de pagamento</label>
+                    <input id="Datapagamento" type="number">
+                </div>
+
+                <div class="input-box">
+                    <label for="Vigência">Vigência do contrato</label>
+                    <input id="Vigência" type="date">
+                    <input id="Vigência" type="date">
+                </div>
+
+                <div class="Renovação" >
+                    <h2 class="reno">Renovação Automática</h2>
+                    <div class="input-box">
+                        <input id="Renovação" type="radio">
+                        <label for="Renovação">Sim</label>
+                    </div>
+
+                    <div class="input-box">
+                        <input id="RenovaçãoAuto" type="radio">
+                        <label for="RenovaçãoAuto">Não</label>
+                    </div>
+                </div>
+
+                <div class="input-box">
+                    <label for="Formapagamento">Forma de pagamento</label>
+                    <input id="Formapagamento" type="text">
+                </div>
+
+                <div class="input-box">
+                    <label for="Serviços">Serviço</label>
+                    <input id="Serviços" type="text">
+                </div>
+
+                <div class="input-box">
+                    <label for="Vezessemana">Vezes na semana</label>
+                    <input id="Vezessemana" type="number">
+                </div>
+            </div>
+
+            <div class="buttons">
+                <button><a href="#">Cancelar</a></button>
+
+                <button><a href="#">Gerar contrato</a></button>
+            </div>
+
+        </form>
+    </div>
+</div>
 
 </body>
 </html>
