Pagamento quase filanizando falta pouco

--- a/SYSCONTRACT/contrato.html
+++ b/SYSCONTRACT/contrato.html
@@ -106,18 +106,22 @@
 
                 <div class="input-box">
                     <label for="Vigência">Vigência do contrato</label>
+                </div>
+                <div class="input-box" class="dois">
                     <input id="Vigência" type="date">
                     <input id="Vigência" type="date">
                 </div>
 
+
+                <h2 class="reno">Renovação Automática</h2>
                 <div class="Renovação" >
-                    <h2 class="reno">Renovação Automática</h2>
-                    <div class="input-box">
+
+                    <div class="">
                         <input id="Renovação" type="radio">
                         <label for="Renovação">Sim</label>
                     </div>
 
-                    <div class="input-box">
+                    <div class="">
                         <input id="RenovaçãoAuto" type="radio">
                         <label for="RenovaçãoAuto">Não</label>
                     </div>
