--- a/SYSCONTRACT/dashboard.html
+++ b/SYSCONTRACT/dashboard.html
@@ -56,6 +56,35 @@
     </nav><!--Fim menu lateral-->
 
 
+    <div class="container">
+        <h1>Visualizador</h1>
+        <div class="status-container">
+            <div class="status" id="vencidos">
+                <h2>Vencidos</h2>
+                <p class="count" id="count-vencidos">0</p>
+            </div>
+            <div class="status" id="a-assinar">
+                <h2>A Assinar</h2>
+                <p class="count" id="count-a-assinar">0</p>
+            </div>
+            <div class="status" id="assinados">
+                <h2>Assinados</h2>
+                <p class="count" id="count-assinados">0</p>
+            </div>
+            <div class="status" id="a-vencer">
+                <h2>A Vencer</h2>
+                <p class="count" id="count-a-vencer">0</p>
+            </div>
+        </div>       
+    </div>
+
+    <!-- Adicionando o gráfico de pizza -->
+    <div class="chart-container">
+        <h1>Insight</h1>
+        <canvas id="contractChart"></canvas>
+    </div>
+
+
 
 
 </body>
