--- a/SYSCONTRACT/dashboard.html
+++ b/SYSCONTRACT/dashboard.html
@@ -10,7 +10,7 @@
     <!-- Link para o CSS do Bootstrap - icone -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
     <!-- Seu arquivo de estilos customizados -->
-    <link rel="stylesheet" href="css/style-system.css">
+    <link rel="stylesheet" href="css/style-dashboard.css">
 </head>
 <body>
     <!--Menu lateral-->
