Colocando alt text para descrever as imagens

--- a/SYSCONTRACT/inicio.html
+++ b/SYSCONTRACT/inicio.html
@@ -32,7 +32,7 @@
 
       <div class="card" style="width: 18rem;"> <!--card1-->
         <a href="login.html">
-          <img src="img/card.jpg" class="card-img-top" alt="...">
+          <img src="img/card.jpg" class="card-img-top" alt="Um aperto de mãos em um ambiente corporativo, simbolizando parceria e negócios.">
         </a>
           <div class="card-body">
             <p class="card-text">Armazenar os seus contratos ?</p>
@@ -41,7 +41,7 @@
 
     <div class="card" style="width: 18rem;"> <!--card2-->
       <a href="login.html">
-        <img src="img/card2.png" class="card-img-top" height="165px" alt="...">
+        <img src="img/card2.png" class="card-img-top" height="165px" alt="Uma pessoa localizando pelo celular">
       </a>
         <div class="card-body">
           <p class="card-text">Ter facilidade para achar os contratos?</p>
@@ -55,7 +55,7 @@
 
         <div class="card" style="width: 18rem;"> <!--card3-->
           <a href="login.html">
-            <img src="img/card3.png" class="card-img-top" alt="...">
+            <img src="img/card3.png" class="card-img-top" alt="Uma pessoa fazendo análise">
           </a>
             <div class="card-body">
               <p class="card-text">Ter uma análise completa dos contratos ?</p>
@@ -65,7 +65,7 @@
     
           <div class="card" style="width: 18rem;"> <!--card4-->
             <a href="login.html">
-            <img src="img/card4.avif" class="card-img-top" alt="...">
+            <img src="img/card4.avif" class="card-img-top" alt="Um datacenter (parte interna de um servidor)">
             </a>
             <div class="card-body">
               <p class="card-text">Ter um banco de dados com os seus clientes?</p>
